sfSandBoxCode/force-app/main/default/objects/Opportunity_WO_Item__c/Opportunity_WO_Item__c.object-meta.xml
<CustomObject>
    <label>Opportunity WO Item</label>
    <nameField>
        <displayFormat>ITM-{00000000}</displayFormat>
        <label>Opportunity WO Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity WO Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>