sfSandBoxCode/force-app/main/default/objects/Opportunity_WO_Item__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <formula>IF(CASE(Item_Group__c,
&quot;Structure Package&quot;, IF(Opportunity__r.Engineering_Items_Approved__c, 1, 0),
&quot;Upstructure Package&quot;, IF(Opportunity__r.Engineering_Items_Approved__c, 1, 0),
&quot;Substructure Package&quot;, IF(Opportunity__r.Engineering_Items_Approved__c, 1, 0),
&quot;Paint Package&quot;, IF(Opportunity__r.Marketing_Items_Approved__c, 1, 0),
&quot;Basic FLT Package&quot;, IF(Opportunity__r.Engineering_Items_Approved__c, 1, 0),
&quot;Basic FLT Package - Upstructure&quot;, IF(Opportunity__r.Engineering_Items_Approved__c, 1, 0),
0) == 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>