sfSandBoxCode/force-app/main/default/objects/Opportunity_WO_Item__c/fields/Opportunity_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Item</label>
    <referenceTo>Opportunity_Item__c</referenceTo>
    <relationshipLabel>Opportunity WO Item</relationshipLabel>
    <relationshipName>Opportunity_WO_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>